--- a/html/analysis.html
+++ b/html/analysis.html
@@ -89,7 +89,8 @@
                             <small class="text-muted"><a id="interestBut" class="text-muted" onclick="showInterestDiv()">Read More</a></small>
                             </h4>
                           </div>
-                          
+                          <div  class="col-sm-12" id="forcegraph" ></div>
+
                         </div>
 
                         <div class="row divider">
