--- a/html/condition_cards.html
+++ b/html/condition_cards.html
@@ -1,12 +1,11 @@
-<div class="container">
+<div class="container" id="cardcontainer">
 
-			<div class="row">
-        <div class="col-sm-2">
+			  <div class="col-sm-2">
           <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Wikipedia_mini_globe_handheld.jpg/250px-Wikipedia_mini_globe_handheld.jpg">
+            <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Wikipedia_mini_globe_handheld.jpg/250px-Wikipedia_mini_globe_handheld.jpg"> -->
               <div class="caption">
                 <h4>Wikipedia searches</h4>
-                <p></p>
+                <p>{{ wiki }}</p>
                 <a href="https://tools.wmflabs.org/pageviews/?project=en.wikipedia.org&platform=all-access&agent=user&range=latest-20&pages=Chlamydia_infection|Gonorrhea|Syphilis|AIDS" class="btn btn-default btn-xs" role="button">Learn more</a>
             </div>
           </div>
@@ -14,24 +13,23 @@
 
 				<div class="col-sm-3">
 					<div class="thumbnail">
-						<img src="https://c1.staticflickr.com/7/6080/6104068209_d134b246f5_b.jpg">
+						<!-- <img src="https://c1.staticflickr.com/7/6080/6104068209_d134b246f5_b.jpg"> -->
 							<div class="caption">
 								<h4>Frequency of occurence</h4>
-								<p>There were 12304 cases of blank reported in 2015.</p>
+								<p>{{ clinic }}</p>
 								 <a href="http://www.cdc.gov/datastatistics/" class="btn btn-default btn-xs" role="button">Learn more at cdc.gov</a>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-sm-2">
+				<div class="col-sm-3">
           <div class="thumbnail">
-            <img src="https://c1.staticflickr.com/2/1189/5141328136_16d8f73ee7_b.jpg">
+            <!-- <img src="https://c1.staticflickr.com/2/1189/5141328136_16d8f73ee7_b.jpg"> -->
               <div class="caption">
                 <h4>Forum mentions</h4>
-                <p>This disease is the 9th most frequently searched for disease on ehealthforum.</p>
+                <p>{{ forum }}</p>
                  <a href="http://www.cdc.gov/datastatistics/" class="btn btn-default btn-xs" role="button">Learn more ata cd</a>
             </div>
           </div>
         </div>
-			</div><!--/row-->
 </div>
