--- a/html/index.html
+++ b/html/index.html
@@ -78,9 +78,7 @@
 
 												<div class="row" id="conditiongraphcontainer" >
 													<div class="col-sm-8">
-														<h3>sexual health map</h3>
-                          </div>
-                          <div class="col-sm-4">
+														<h3>Health Issue Map</h3>
                             <small id="interestDiv" class="text-muted2"  >
 																Graph connectivity shows related conditions
                             </small>
@@ -163,9 +161,7 @@
 
 
 												<div class="row" id="forumlistcontainer" >
-													<!-- <div class="col-sm-8">
-														<h3>other experiences</h3>
-													</div> -->
+
 													<!--<div class="col-sm-4">
 														<small id="relatedCond" class="text-muted2"  >
 														These posts are the most relevant and are relevant to the condition selected above.
@@ -179,19 +175,21 @@
 												</div>
 
 
-                        <div class="row divider">
+
+
+
+
+												<div class="row divider">
                            <div class="col-sm-12"><hr></div>
                         </div>
-
-
-
-
-                        <hr>
-                        <hr>
-                        <div class="row" id="footer">
+                      <div class="row" id="footer">
 
                           <div class="col-sm-12">
-                            <p class="text-right">
+														<p class="text-right">
+																The information contained on this website is not intended to be a substitute for professional medical advice, diagnosis or treatment in any manner. Always seek the advice of your physician or other qualified health provider with any questions you may have regarding any medical condition.  This website is for educational use only, and any use with the intention of diagnosing a condition is in violation of the terms of use of this website.
+															</p>
+															<hr/>
+															<p class="text-right">
                             Content under Creative Commons <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>BY-NC-SA. </a>Powered by  <a href='https://developers.google.com/appengine/'>GAE</a>/ Uses <a href="http://d3js.org/">D3</a>. Bootstrap layout adapted from <a href="http://bootply.com/" target="ext">Bootply.</a> <br>Uses <a href="http://fortawesome.github.io/Font-Awesome/">Font-Awesome</a> and <a href="https://github.com/noizwaves/bootstrap-social-buttons">bootstrap-social-buttons</a>. For best results, try <a href="https://www.mozilla.org/en-US/firefox/new/" target="ext">Firefox.</a>
                             </p>
                           </div>
