--- a/html/condition_cards.html
+++ b/html/condition_cards.html
@@ -1,6 +1,20 @@
 <div class="container" id="cardcontainer">
+<div class="row">
+				<div class="col-sm-6">
+					<div class="thumbnail">
+						<!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Wikipedia_mini_globe_handheld.jpg/250px-Wikipedia_mini_globe_handheld.jpg"> -->
+							<div class="caption">
+								<h4>What is {{ condition }}?</h4>
+								<p>It's always a good idea to consult with your doctor whenever you have any concerns about your health.
+									 If you believe you may have had exposure to a sexually transmitted disease it's also important that you refrain from any sexual activities with other until you've consulted with a medical professional.</p>
+								<a href="https://tools.wmflabs.org/pageviews/?project=en.wikipedia.org&platform=all-access&agent=user&range=latest-20&pages=Chlamydia_infection|Gonorrhea|Syphilis|AIDS" class="btn btn-default btn-xs" role="button">Learn more</a>
+						</div>
+					</div>
+				</div>
 
-			  <div class="col-sm-2">
+
+				{% if wiki %}
+				<div class="col-sm-2">
           <div class="thumbnail">
             <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Wikipedia_mini_globe_handheld.jpg/250px-Wikipedia_mini_globe_handheld.jpg"> -->
               <div class="caption">
@@ -10,8 +24,11 @@
             </div>
           </div>
         </div>
-
-				<div class="col-sm-3">
+				{% endif %}
+</div>
+<div class="row">
+				{% if clinic %}
+				<div class="col-sm-4">
 					<div class="thumbnail">
 						<!-- <img src="https://c1.staticflickr.com/7/6080/6104068209_d134b246f5_b.jpg"> -->
 							<div class="caption">
@@ -21,8 +38,10 @@
 						</div>
 					</div>
 				</div>
+				{% endif %}
 
-				<div class="col-sm-3">
+				{% if forum %}
+				<div class="col-sm-4">
           <div class="thumbnail">
             <!-- <img src="https://c1.staticflickr.com/2/1189/5141328136_16d8f73ee7_b.jpg"> -->
               <div class="caption">
@@ -32,4 +51,7 @@
             </div>
           </div>
         </div>
+				{% endif %}
+</div>
+
 </div>
