--- a/html/forum_template.html
+++ b/html/forum_template.html
@@ -5,8 +5,8 @@
  						<li class="timeline-inverted">
  								<div class="timeline-panel">
  									<div class="timeline-body">
- 										<a href="{{ item['post'] }}">{{ item['response'] }}</a>
-										<a class='pull-right' style="color:#ccc" href="irrelevant?response={{item['reponse']}}">(Mark this post as irrelevant).</a>
+ 										<a href="{{ item['post'] }}">{{ item['askertxt'] }}</a>
+										<a class='pull-right' style="color:#ccc" href="#">(Mark this post as irrelevant).</a>
  									</div>
  								</div>
  						</li>
