--- a/html/analysis.html
+++ b/html/analysis.html
@@ -19,40 +19,13 @@
         <div class="row">
 
 					<!-- sidebar -->
-					<div class="column col-sm-3" id="sidebar">
 
-							<ul class="nav text-center">
-									<li>
-										<h3>Health Info Connect</h3>
-										<!--<a href="http://www.makeloft.org/" target="_blank" >by MakeLofT</a>-->
-									</li>
-									<li>
-									<p><i>Enter your symptoms and we'll connect you with more information and suggest what to bring up with your doctor.</i></p>
-									</li>
-
-									<div class="row">
-										<div class="col-sm-12">
-											<form method="post">
-												<div class="form-group">
-													<label for="exampleTextarea">Symptoms</label>
-													<textarea class="form-control" id="exampleTextarea" rows="5" placeholder="Enter your symptoms as you would describe them to a doctor" name="content"></textarea>
-												</div>
-												<button type="submit" class="btn btn-primary pull-right" style="background:#E2A675;color:white">Search</button>
-											</form>
-										</div>
-									</li>
-
-
-							</ul>
-
-
-					</div>
 					<!-- /sidebar -->
 
             <!-- main -->
-            <div class="column col-sm-9" id="main">
+            <div class="column col-sm-12" id="main">
                 <div class="padding">
-                    <div class="full col-sm-9">
+                    <div class="full col-sm-12">
 
                         <!-- content -->
 
@@ -89,8 +62,14 @@
                             <small class="text-muted"><a id="interestBut" class="text-muted" onclick="showInterestDiv()">Read More</a></small>
                             </h4>
                           </div>
-                          <div  class="col-sm-12" id="forcegraph" ></div>
-
+													<div  class="col-sm-8" id="forcegraph" >
+														<div class='uil-ripple-css' style='transform:scale(1);' id="ripple"><div></div><div></div></div>
+													</div>
+													<div class="col-sm-4 pre-scrollable" id="conditionlistcontainer">
+														<div class="row" id="wordlist" >
+															<h4>Predictive Words</h4>
+														</div>
+													</div>
                         </div>
 
                         <div class="row divider">
@@ -119,29 +98,7 @@
 
 
 
-												<div class="row" id="forumlistcontainer" >
-													<div class="col-sm-8">
-														<h4>Similar Experiences</h4>
-													</div>
-													<div class="col-sm-4">
-														<small id="relatedCond" class="text-muted2"  >
-																Click a post to jump to that page.
-														</small>
-														<small class="text-muted"><a id="interestBut" class="text-muted" onclick="showInterestDiv()">Read More</a></small>
-														</h4>
-													</div>
 
-													<div class="col-sm-12">
-
-												  <ul class="timeline" id="simexp">
-
-
-
-
-												  </ul>
-												</div>
-
-												</div>
 
 
                         <div class="row divider">
